--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ a:hover {
 .main-title {
     text-align: center;
     font-weight: bold;
+    margin-bottom: 30px;
 }
 .courses-img img {
     width: 100%;
@@ -120,7 +121,7 @@ a:hover {
     width: 19%;
     margin-bottom: 20px;
     padding: 10px;
-    border: 1px solid #c8c8c8;
+    border: 1px solid #eef0f1;
 }
 .courses-title {
     text-align: center;
@@ -128,6 +129,96 @@ a:hover {
 }
 .courses-img {
     margin-bottom: 10px;
+}
+.free-service-item {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+.free-service-item i {
+    color: #269de3;
+    font-size: 30px;
+    margin-right: 10px;
+}
+.owl-feedback-form input {
+    display: block;
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 5px 10px;
+    border: 1px solid rgba(122, 122, 122, 0.25);
+    border-radius: 2px;
+}
+.owl-feedback-form a {
+    background-color: #269de3;
+    padding: 10px;
+    color: #fff;
+    border: 2px solid #269de3;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+}
+.owl-feedback-form a:hover {
+    background-color: #fff;
+    color: #269de3;
+}
+button.close {
+    z-index: 1;
+    position: relative;
+    right: 10px;
+    top: 5px;
+    font-size: 26px;
+}
+.order-btn {
+    text-align: center;
+    margin-bottom: 40px;
+}
+.main-button-obj {
+    background-color: #269de3;
+    color: #fff;
+    font-weight: bold;
+    border: 2px solid #269de3;
+    border-radius: 4px;
+    padding: 10px 20px;
+}
+.main-button-obj:hover {
+    background-color: #fff;
+    color: #269de3;
+}
+.image-consult img {
+    width: 100%;
+}
+.contact-block-flex {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.map-block {
+    margin-bottom: 40px;
+}
+.back-footer {
+    border-top: 2px solid #eef0f1;
+    padding: 40px 0;
+}
+.footer-flex {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+.footer-links a {
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+}
+.footer-copyright {
+    text-align: center;
+}
+.footer-copyright p {
+    font-size: 12px;
+}
+.footer-links {
+    margin-right: 20px;
 }
 @media (min-width: 768px) {
     .navbar-nav {
@@ -143,6 +234,12 @@ a:hover {
     .header-logo {
         margin-bottom: 20px;
     }
+    .footer-logo {
+        margin-bottom: 20px;
+    }
+    .courses-item {
+        width: 32%;
+    }
 }
 @media (max-width: 767px) {
     .header-contact a {
@@ -156,5 +253,21 @@ a:hover {
     }
     .header-time {
         margin-bottom: 15px;
+    }
+    .courses-item {
+        width: 49%;
+    }
+    .footer-flex {
+        flex-direction: column;
+    }
+    .contact-block-flex {
+        flex-direction: column;
+    }
+    .header-row-flex {
+        justify-content: center;
+    }
+    .footer-logo {
+        width: 100%;
+        text-align: center;
     }
 }
