--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,10 @@ a:hover {
     width: 253px;
 }
 .header-logo span{
-    font-size: 36px;
+    font-size: 50px;
     font-weight: bold;
     font-family: 'Lobster', cursive;
+    color: red;
 }
 .header-logo a {
     display: flex;
